reorganized file structure

--- a/views/quote-request/index.html
+++ b/views/quote-request/index.html
@@ -21,6 +21,6 @@
       <input type="submit" value="Submit" />
     </form>
 
-    <script src="/JS/quote-request.js"></script>
+    <script src="quote-request.js"></script>
   </body>
 </html>
