--- a/views/admin-login/index.html
+++ b/views/admin-login/index.html
@@ -18,5 +18,7 @@
         <input type="submit" value="Submit" />
       </form>
     </div>
+
+    <script src="admin.js"></script>
   </body>
 </html>
