--- a/views/contact-on/index.html
+++ b/views/contact-on/index.html
@@ -19,6 +19,6 @@
       <button type="submit" id="submit">Submit</button>
     </form>
 
-    <script src="/JS/contact.js"></script>
+    <script src="contact.js"></script>
   </body>
 </html>
