--- a/views/admin-login/index.html
+++ b/views/admin-login/index.html
@@ -15,7 +15,7 @@
         <input type="email" id="email" name="email" /><br />
         <label for="password">Password:</label><br />
         <input type="password" id="password" name="password" /><br /><br />
-        <input type="submit" value="Submit" />
+        <input type="submit" id="submit" value="Submit" />
       </form>
     </div>
 
